tests/tooling/fixtures/native/execution/negative/switch_signed_case_label_missing_number_plus.objc3
module SwitchSignedCaseLabelMissingNumberPlus;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case +:
      return 1;
    default:
      return 0;
  }
}